css refactor